flux/resources/demo/podinfo-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    #cert-manager.io/cluster-issuer: selfsigned-clusterissuer
  name: podinfo
  namespace: demo
spec:
  rules:
  - host: podinfo.k1.gcps.lab
    http:
      paths:
      - backend:
          serviceName: podinfo
          servicePort: 9898
  #tls:
    #- hosts:
      #- nginx.test.org
      #secretName: nginx.test.org
